# monstrominas

./: CMakeLists.txt  LEEME.md  README.md
include/: game.h  monstrominas.h  resources_flag.h  resources_font.h  resources_mine.h  resources_warning.h
src/: main.c  monstrominas.c  support.c
